--- a/index.html
+++ b/index.html
@@ -58,11 +58,12 @@
         <a onclick="showSection('glowna')">Sekcja Główna</a>
         <a onclick="showSection('tutoriale')">Tutoriale</a>
         <a onclick="showSection('faq')">FAQ</a>
-        <a onclick="showSection('blog')">Blog</a>
-        <a onclick="showSection('grupa-facebook')">Grupa Facebook</a>
-        <a onclick="showSection('wiki')">Wiki</a>
-        <a onclick="showSection('playlista-kanaly')">Playlista Kanały</a>
-        <a onclick="showSection('playlista-retro')">Playlista RetroTVMalina</a>
+        <a href="https://retrotvmalina.blogspot.com" target="_blank">Blog</a>
+        <a href="https://www.facebook.com/groups/1940786819769638" target="_blank">Grupa Facebook</a>
+        <a href="https://co-by-bylo-gdyby-kanaly-z-bajkami-nie-umarly.fandom.com/pl/wiki/Co_by_było_gdyby_kanały_z_bajkami_nie_umarły%3F_Wiki" target="_blank">Wiki</a>
+        <a href="https://www.youtube.com/playlist?list=PLHHYfI8jZoQN4GdgpJUGuJt85Y2lmB9RG" target="_blank">Playlista Kanały</a>
+        <a href="https://www.youtube.com/playlist?list=PLHHYfI8jZoQPfo-dm95f2iUa-HaOpvbhP")">Playlista RetroTVMalina</a>
+        <a href="https://discord.gg/xPypxhbpxX" target="_blank">Serwer Discord</a>
     </nav>
 </header>
 
@@ -93,26 +94,6 @@
     <p>Odpowiedź: Zastanawiam się nad tym.</p>
     <h3>Pytanie nr. 4: Czy udostępniasz filmiki z dubbingiem?</h3>
     <p>Odpowiedź: Nie udostępniam plików wideo ze względu na prawa autorskie.</p>
-</section>
-
-<section id="blog">
-    <h2><a href="https://retrotvmalina.blogspot.com" target="_blank">Blog RetroTVMalina</a></h2>
-</section>
-
-<section id="grupa-facebook">
-    <h2><a href="https://www.facebook.com/groups/1940786819769638" target="_blank">Grupa Facebook "Kanały z Bajkami"</a></h2>
-</section>
-
-<section id="wiki">
-    <h2><a href="https://co-by-bylo-gdyby-kanaly-z-bajkami-nie-umarly.fandom.com/pl/wiki/Co_by_było_gdyby_kanały_z_bajkami_nie_umarły%3F_Wiki" target="_blank">Kanały z Bajkami Wiki</a></h2>
-</section>
-
-<section id="playlista-kanaly">
-    <h2><a href="https://www.youtube.com/playlist?list=PLHHYfI8jZoQN4GdgpJUGuJt85Y2lmB9RG" target="_blank">Playlista Kanały z Bajkami</a></h2>
-</section>
-
-<section id="playlista-retro">
-    <h2><a href="https://www.youtube.com/playlist?list=PLHHYfI8jZoQPfo-dm95f2iUa-HaOpvbhP" target="_blank">Playlista RetroTVMalina</a></h2>
 </section>
 
 <footer>
